--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,14 +8,18 @@
   }
 
   .input {
-    @apply bg-gray-100 rounded p-[.4rem];
+    @apply bg-gray-100 rounded p-[.4rem] outline-none focus:border focus:border-primary transition duration-300;
+  }
+
+  .button-primary {
+    @apply bg-primary shadow hover:shadow-xl text-secondary cursor-pointer rounded py-1 px-2 transition duration-200;
   }
   .toolbar-card {
     @apply bg-gray-200 p-2 rounded-lg  md:w-[200px] flex justify-center shadow hover:bg-white hover:shadow-lg transition duration-150 cursor-pointer;
   }
 
   .suggestions-image {
-    @apply w-[200px] md:w-[150px] h-[120px] relative rounded-lg overflow-hidden border flex-shrink-0;
+    @apply w-[80%] md:w-[150px] h-[120px] md:h-[120px] relative rounded-lg overflow-hidden border flex-shrink-0;
   }
 }
 
