--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+	transition: all 0.5s linear;
+}
 @layer components {
 	.default-container {
 		@apply max-w-screen-xl xl:max-w-screen-2xl  mx-auto  w-full;
